--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -115,6 +115,7 @@
             android:layout_marginTop="10dp"
             android:text="关于"
             android:textColor="@color/second_color"
+            android:onClick="@{vm::onAboutClick}"
             android:textSize="16sp"
             app:layout_constraintRight_toRightOf="@id/btn_enter"
             app:layout_constraintTop_toBottomOf="@id/btn_enter" />
