--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+
         <variable
             name="vm"
-            type="com.martin.basic.ui.main.MainViewModel"/>
+            type="com.martin.basic.ui.main.MainViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,14 +14,25 @@
         android:layout_height="match_parent"
         tools:context="com.martin.basic.ui.main.MainActivity">
 
-        <com.youth.banner.Banner
-            android:id="@+id/banner"
+        <com.martin.basic.library.widget.CompatViewPager
+            android:id="@+id/mainViewPager"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="#F00"
+            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationBar"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/bottomNavigationBar"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/navigationBarSize"
+            android:layout_gravity="start"
+            android:background="@color/main_color"
+            app:itemIconTint="@color/bottom_navigation_icon_tint"
+            app:itemTextColor="@color/bottom_navigation_text_tint"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:menu="@menu/menu_main_bottom_navigation" />
     </android.support.constraint.ConstraintLayout>
 </layout>
